<resources>
    <string name="app_name">Covid Check</string>
    <string name="name">lets grow more</string>
    <string name="active">Active - </string>
    <string name="lets_grow_more">Lets Grow More</string>
    <string name="covid_records_tracking">Covid Records Tracking</string>
    <string name="search_state">Search State</string>
    <string name="city_name">City Name</string>
    <string name="state_name">State Name</string>
    <string name="active_text">Active-</string>
    <string name="cured">Cured-</string>
    <string name="death">Death-</string>
    <string name="total">Total-</string>
</resources>