<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272323"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/coronavirus"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/coronavirus" />

    <ImageView
        android:id="@+id/coronavirus2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/coronavirus" />

    <ImageView
        android:id="@+id/coronavirus3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="40dp"
        android:src="@drawable/coronavirus" />

    <TextView
        android:id="@+id/lgm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="58dp"
        android:layout_marginTop="18dp"
        android:background="#158EC5"
        android:gravity="center_horizontal"
        android:padding="6dp"
        android:text="@string/lets_grow_more"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/covidTracker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lgm"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_horizontal"
        android:padding="18dp"
        android:text="@string/covid_records_tracking"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/covidTracker"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/search" />

        <EditText
            android:id="@+id/searching"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:cursorVisible="true"
            android:focusable="auto"
            android:hint="@string/search_state"
            android:paddingHorizontal="10dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dataList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar"
        android:layout_marginHorizontal="15dp"
        android:scrollbarThumbVertical="@color/cardview_light_background"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right"
        tools:listitem="@layout/block" />


</RelativeLayout>